--- a/src/patternfly/demos/Table/table-pagination-footer-static.hbs
+++ b/src/patternfly/demos/Table/table-pagination-footer-static.hbs
@@ -1,4 +1,4 @@
 {{#> pagination pagination--modifier="pf-m-bottom pf-m-static"}}
-  {{> pagination-menu-toggle pagination-menu-toggle--id="{{page--id}}-pagination-menu-toggle-bottom-example-static" pagination-menu-toggle--modifier="pf-m-top"}}
+  {{> pagination-menu-toggle pagination-menu-toggle--id=(concat page--id "-pagination-menu-toggle-bottom-example-static") pagination-menu-toggle--modifier="pf-m-top"}}
   {{> pagination-nav-content}}
 {{/pagination}}
