--- a/src/patternfly/demos/Table/table-pagination-footer.hbs
+++ b/src/patternfly/demos/Table/table-pagination-footer.hbs
@@ -1,4 +1,4 @@
 {{#> pagination pagination--modifier="pf-m-bottom"}}
-  {{> pagination-menu-toggle pagination-menu-toggle--id="{{page--id}}-pagination-menu-toggle-bottom-example" pagination-menu-toggle--modifier="pf-m-top"}}
+  {{> pagination-menu-toggle pagination-menu-toggle--id=(concat page--id "-pagination-menu-toggle-bottom-example") pagination-menu-toggle--modifier="pf-m-top"}}
   {{> pagination-nav-content}}
 {{/pagination}}
