fix(menu-toggle): added pf-m-avatar to menu toggle icon

--- a/src/patternfly/components/MenuToggle/menu-toggle-icon.hbs
+++ b/src/patternfly/components/MenuToggle/menu-toggle-icon.hbs
@@ -1,4 +1,8 @@
-<span class="{{pfv}}menu-toggle__icon{{#if menu-toggle-icon--modifier}} {{menu-toggle-icon--modifier}}{{/if}}"
+<span class="{{pfv}}menu-toggle__icon
+  {{setModifiers
+    menu-toggle-icon--HasAvatar='pf-m-avatar'
+    menu-toggle-icon--modifier=menu-toggle-icon--modifier
+  }}"
   {{#if menu-toggle-icon--attribute}}
     {{{menu-toggle-icon--attribute}}}
   {{/if}}>
