--- a/src/patternfly/components/MenuToggle/menu-toggle.scss
+++ b/src/patternfly/components/MenuToggle/menu-toggle.scss
@@ -496,6 +496,7 @@
 }
 
 // - Menu toggle controls - Menu toggle icon
+.#{$menu-toggle}__icon,
 .#{$menu-toggle}__controls,
 .#{$menu-toggle}__toggle-icon {
   display: flex;
@@ -505,7 +506,12 @@
 
 .#{$menu-toggle}__icon {
   flex-shrink: 0;
-  min-height: var(--#{$menu-toggle}__icon--MinHeight);
+
+  &.pf-m-avatar {
+    align-items: center;
+    margin-block-start: calc(var(--#{$menu-toggle}--PaddingBlockStart) / 2 * -1);
+    margin-block-end: calc(var(--#{$menu-toggle}--PaddingBlockEnd) / 2 * -1);
+  }
 }
 
 // - Menu toggle controls
