--- a/src/patternfly/components/Button/button.scss
+++ b/src/patternfly/components/Button/button.scss
@@ -50,6 +50,7 @@
   // Secondary
   --#{$button}--m-secondary--Color: var(--pf-t--global--text--color--brand--default);
   --#{$button}--m-secondary--BorderColor: var(--pf-t--global--border--color--brand--default);
+  --#{$button}--m-secondary--TransitionDuration: var(var(--pf-t--global--motion--duration--fade--short));
   --#{$button}--m-secondary__icon--Color: var(--pf-t--global--icon--color--brand--default);
   --#{$button}--m-secondary--hover--Color: var(--pf-t--global--text--color--brand--hover);
   --#{$button}--m-secondary--hover--BorderColor: var(--pf-t--global--border--color--brand--hover);
@@ -345,6 +346,7 @@
   &.pf-m-secondary {
     --#{$button}--Color: var(--#{$button}--m-secondary--Color);
     --#{$button}--BorderColor: var(--#{$button}--m-secondary--BorderColor);
+    --#{$button}--TransitionDuration: var(--#{$button}--m-secondary--TransitionDuration);
     --#{$button}__icon--Color: var(--#{$button}--m-secondary__icon--Color);
     --#{$button}--hover--Color: var(--#{$button}--m-secondary--hover--Color);
     --#{$button}--hover--BorderColor: var(--#{$button}--m-secondary--hover--BorderColor);
