--- a/src/patternfly/components/Button/button.scss
+++ b/src/patternfly/components/Button/button.scss
@@ -50,7 +50,7 @@
   // Secondary
   --#{$button}--m-secondary--Color: var(--pf-t--global--text--color--brand--default);
   --#{$button}--m-secondary--BorderColor: var(--pf-t--global--border--color--brand--default);
-  --#{$button}--m-secondary--TransitionDuration: var(var(--pf-t--global--motion--duration--fade--short));
+  --#{$button}--m-secondary--TransitionDuration: var(--pf-t--global--motion--duration--fade--short);
   --#{$button}--m-secondary__icon--Color: var(--pf-t--global--icon--color--brand--default);
   --#{$button}--m-secondary--hover--Color: var(--pf-t--global--text--color--brand--hover);
   --#{$button}--m-secondary--hover--BorderColor: var(--pf-t--global--border--color--brand--hover);
