--- a/src/patternfly/components/FormControl/form-control.scss
+++ b/src/patternfly/components/FormControl/form-control.scss
@@ -90,11 +90,10 @@
   // Textarea
   --#{$form-control}--textarea--Width: var(--#{$form-control}--Width);
   --#{$form-control}--textarea--Height: auto;
-  --#{$form-control}--textarea--Padding: calc(-1 * var(--#{$form-control}--OutlineOffset));
-  --#{$form-control}--textarea--PaddingBlockStart: calc(var(--pf-t--global--spacer--control--vertical--default) - var(--#{$form-control}--textarea--Padding));
-  --#{$form-control}--textarea--PaddingBlockEnd: calc(var(--pf-t--global--spacer--control--vertical--default) - var(--#{$form-control}--textarea--Padding));
-  --#{$form-control}--textarea--PaddingInlineEnd: calc(var(--#{$form-control}--inset--base) - var(--#{$form-control}--textarea--Padding));
-  --#{$form-control}--textarea--PaddingInlineStart: calc(var(--#{$form-control}--inset--base) - var(--#{$form-control}--textarea--Padding));
+  --#{$form-control}--textarea--PaddingBlockStart: calc(-1 * var(--#{$form-control}--OutlineOffset));
+  --#{$form-control}--textarea--PaddingBlockEnd: calc(-1 * var(--#{$form-control}--OutlineOffset));
+  --#{$form-control}--textarea--PaddingInlineEnd: calc(-1 * var(--#{$form-control}--OutlineOffset));
+  --#{$form-control}--textarea--PaddingInlineStart: calc(-1 * var(--#{$form-control}--OutlineOffset));
 
   // Form control icon
   --#{$form-control}__icon--Color: var(--pf-t--global--icon--color--regular);
@@ -177,14 +176,24 @@
   }
 
   &.pf-m-textarea {
-    padding: var(--#{$form-control}--textarea--Padding);
+    padding-block-start: var(--#{$form-control}--textarea--PaddingBlockStart);
+    padding-block-end: var(--#{$form-control}--textarea--PaddingBlockEnd);
+    padding-inline-start: var(--#{$form-control}--textarea--PaddingInlineStart);
+    padding-inline-end: var(--#{$form-control}--textarea--PaddingInlineEnd);
+   
+    &.pf-m-success,
+    &.pf-m-warning,
+    &.pf-m-error {
+      --#{$form-control}--m-status--PaddingInlineEnd--offset: calc(var(--#{$form-control}__icon--FontSize) + var(--#{$form-control}--ColumnGap)); 
+    }
 
-    > :is(textarea) {
-      padding-block-start: var(--#{$form-control}--textarea--PaddingBlockStart);
-      padding-block-end: var(--#{$form-control}--textarea--PaddingBlockEnd);
-      padding-inline-start: var(--#{$form-control}--textarea--PaddingInlineStart);
-      padding-inline-end: var(--#{$form-control}--textarea--PaddingInlineEnd);
+    > textarea {
+      padding-block-start: calc(var(--pf-t--global--spacer--control--vertical--default) - var(--#{$form-control}--textarea--PaddingBlockStart));
+      padding-block-end: calc(var(--pf-t--global--spacer--control--vertical--default) - var(--#{$form-control}--textarea--PaddingBlockEnd));
+      padding-inline-start: calc(var(--#{$form-control}--inset--base) - var(--#{$form-control}--textarea--PaddingInlineStart));
+      padding-inline-end: calc(var(--#{$form-control}--inset--base) - var(--#{$form-control}--textarea--PaddingInlineEnd) + var(--#{$form-control}--m-status--PaddingInlineEnd--offset, 0));  
       outline-offset: 0;
+      scrollbar-gutter: stable;
     }
   }
 
