--- a/src/patternfly/base/tokens/tokens-dark.scss
+++ b/src/patternfly/base/tokens/tokens-dark.scss
@@ -1,22 +1,28 @@
 
 // Do not edit directly
-// Generated on Fri, 13 Sep 2024 01:51:18 GMT
+// Generated on Mon, 23 Sep 2024 22:48:17 GMT
 
 @mixin pf-v6-tokens {
   --pf-t--global--background--color--action--plain--default: rgba(0, 0, 0, 0.0000);
   --pf-t--global--dark--background--color--500: rgba(21, 21, 21, 0.8000);
   --pf-t--global--dark--background--color--600: rgba(199, 199, 199, 0.1500);
   --pf-t--global--dark--box-shadow--color--100: rgba(0, 0, 0, 0.5000);
+  --pf-t--global--dark--box-shadow--color--200: rgba(0, 0, 0, 0.7000);
   --pf-t--global--background--color--action--plain--clicked: var(--pf-t--global--dark--background--color--600);
   --pf-t--global--background--color--action--plain--hover: var(--pf-t--global--dark--background--color--600);
   --pf-t--global--background--color--backdrop--default: var(--pf-t--global--dark--background--color--500);
-  --pf-t--global--box-shadow--color--lg: var(--pf-t--global--dark--box-shadow--color--100);
-  --pf-t--global--box-shadow--color--md: var(--pf-t--global--dark--box-shadow--color--100);
-  --pf-t--global--box-shadow--color--sm: var(--pf-t--global--dark--box-shadow--color--100);
+  --pf-t--global--background--color--tertiary--default: var(--pf-t--global--dark--background--color--600);
+  --pf-t--global--box-shadow--color--lg--default: var(--pf-t--global--dark--box-shadow--color--100);
+  --pf-t--global--box-shadow--color--lg--directional: var(--pf-t--global--dark--box-shadow--color--200);
+  --pf-t--global--box-shadow--color--md--default: var(--pf-t--global--dark--box-shadow--color--100);
+  --pf-t--global--box-shadow--color--md--directional: var(--pf-t--global--dark--box-shadow--color--200);
+  --pf-t--global--box-shadow--color--sm--default: var(--pf-t--global--dark--box-shadow--color--100);
+  --pf-t--global--box-shadow--color--sm--directional: var(--pf-t--global--dark--box-shadow--color--200);
   --pf-t--global--dark--background--color--100: var(--pf-t--color--gray--95);
   --pf-t--global--dark--background--color--200: var(--pf-t--color--gray--80);
   --pf-t--global--dark--background--color--300: var(--pf-t--color--gray--70);
   --pf-t--global--dark--background--color--400: var(--pf-t--color--gray--10);
+  --pf-t--global--dark--background--color--450: var(--pf-t--color--gray--20);
   --pf-t--global--dark--background--color--highlight--100: var(--pf-t--color--yellow--20);
   --pf-t--global--dark--background--color--highlight--200: var(--pf-t--color--yellow--30);
   --pf-t--global--dark--border--color--100: var(--pf-t--color--gray--50);
@@ -95,7 +101,9 @@
   --pf-t--global--background--color--floating--hover: var(--pf-t--global--dark--background--color--200);
   --pf-t--global--background--color--highlight--clicked: var(--pf-t--global--dark--background--color--highlight--200);
   --pf-t--global--background--color--highlight--default: var(--pf-t--global--dark--background--color--highlight--100);
+  --pf-t--global--background--color--inverse--clicked: var(--pf-t--global--dark--background--color--450);
   --pf-t--global--background--color--inverse--default: var(--pf-t--global--dark--background--color--400);
+  --pf-t--global--background--color--inverse--hover: var(--pf-t--global--dark--background--color--450);
   --pf-t--global--background--color--primary--clicked: var(--pf-t--global--dark--background--color--300);
   --pf-t--global--background--color--primary--default: var(--pf-t--global--dark--background--color--200);
   --pf-t--global--background--color--primary--hover: var(--pf-t--global--dark--background--color--300);
