--- a/src/patternfly/base/tokens/tokens-default.scss
+++ b/src/patternfly/base/tokens/tokens-default.scss
@@ -1,6 +1,6 @@
 
 // Do not edit directly
-// Generated on Fri, 13 Sep 2024 01:51:18 GMT
+// Generated on Mon, 23 Sep 2024 22:48:17 GMT
 
 @mixin pf-v6-tokens {
   --pf-t--global--background--color--500: rgba(21, 21, 21, 0.2000);
@@ -15,26 +15,33 @@
   --pf-t--global--border--width--100: 1px;
   --pf-t--global--border--width--200: 2px;
   --pf-t--global--border--width--300: 3px;
-  --pf-t--global--box-shadow--X--100: -8px;
+  --pf-t--global--box-shadow--X--100: -10px;
   --pf-t--global--box-shadow--X--200: -4px;
   --pf-t--global--box-shadow--X--300: -1px;
   --pf-t--global--box-shadow--X--400: 0px;
+  --pf-t--global--box-shadow--X--50: -20px;
   --pf-t--global--box-shadow--X--500: 1px;
   --pf-t--global--box-shadow--X--600: 4px;
-  --pf-t--global--box-shadow--X--700: 8px;
-  --pf-t--global--box-shadow--Y--100: -8px;
+  --pf-t--global--box-shadow--X--700: 10px;
+  --pf-t--global--box-shadow--X--800: 20px;
+  --pf-t--global--box-shadow--Y--100: -10px;
   --pf-t--global--box-shadow--Y--200: -4px;
   --pf-t--global--box-shadow--Y--300: -1px;
   --pf-t--global--box-shadow--Y--400: 0px;
+  --pf-t--global--box-shadow--Y--50: -20px;
   --pf-t--global--box-shadow--Y--500: 1px;
   --pf-t--global--box-shadow--Y--600: 4px;
-  --pf-t--global--box-shadow--Y--700: 8px;
+  --pf-t--global--box-shadow--Y--700: 10px;
+  --pf-t--global--box-shadow--Y--800: 20px;
   --pf-t--global--box-shadow--blur--100: 4px;
-  --pf-t--global--box-shadow--blur--200: 8px;
-  --pf-t--global--box-shadow--blur--300: 24px;
-  --pf-t--global--box-shadow--color--100: rgba(0, 0, 0, 0.1600);
-  --pf-t--global--box-shadow--color--200: rgba(0, 0, 0, 0.1200);
+  --pf-t--global--box-shadow--blur--200: 9px;
+  --pf-t--global--box-shadow--blur--300: 20px;
+  --pf-t--global--box-shadow--color--100: rgba(41, 41, 41, 0.1500);
+  --pf-t--global--box-shadow--color--200: rgba(41, 41, 41, 0.2000);
   --pf-t--global--box-shadow--spread--100: 0px;
+  --pf-t--global--box-shadow--spread--200: -4px;
+  --pf-t--global--box-shadow--spread--300: -8px;
+  --pf-t--global--box-shadow--spread--400: -20px;
   --pf-t--global--breakpoint--100: 0rem;
   --pf-t--global--breakpoint--200: 36rem;
   --pf-t--global--breakpoint--250: 40rem;
@@ -103,11 +110,13 @@
   --pf-t--global--background--color--200: var(--pf-t--color--gray--10);
   --pf-t--global--background--color--300: var(--pf-t--color--gray--20);
   --pf-t--global--background--color--400: var(--pf-t--color--gray--80);
+  --pf-t--global--background--color--450: var(--pf-t--color--gray--70);
   --pf-t--global--background--color--action--plain--clicked: var(--pf-t--global--background--color--600);
   --pf-t--global--background--color--action--plain--hover: var(--pf-t--global--background--color--600);
   --pf-t--global--background--color--backdrop--default: var(--pf-t--global--background--color--500);
   --pf-t--global--background--color--highlight--100: var(--pf-t--color--yellow--30);
   --pf-t--global--background--color--highlight--200: var(--pf-t--color--yellow--40);
+  --pf-t--global--background--color--tertiary--default: var(--pf-t--global--background--color--600);
   --pf-t--global--border--color--100: var(--pf-t--color--gray--30);
   --pf-t--global--border--color--200: var(--pf-t--color--gray--40);
   --pf-t--global--border--color--300: var(--pf-t--color--gray--50);
@@ -137,43 +146,49 @@
   --pf-t--global--border--width--strong: var(--pf-t--global--border--width--200);
   --pf-t--global--box-shadow--X--lg--bottom: var(--pf-t--global--box-shadow--X--400);
   --pf-t--global--box-shadow--X--lg--default: var(--pf-t--global--box-shadow--X--400);
-  --pf-t--global--box-shadow--X--lg--left: var(--pf-t--global--box-shadow--X--100);
-  --pf-t--global--box-shadow--X--lg--right: var(--pf-t--global--box-shadow--X--700);
+  --pf-t--global--box-shadow--X--lg--left: var(--pf-t--global--box-shadow--X--50);
+  --pf-t--global--box-shadow--X--lg--right: var(--pf-t--global--box-shadow--X--800);
   --pf-t--global--box-shadow--X--lg--top: var(--pf-t--global--box-shadow--X--400);
   --pf-t--global--box-shadow--X--md--bottom: var(--pf-t--global--box-shadow--X--400);
   --pf-t--global--box-shadow--X--md--default: var(--pf-t--global--box-shadow--X--400);
-  --pf-t--global--box-shadow--X--md--left: var(--pf-t--global--box-shadow--X--200);
-  --pf-t--global--box-shadow--X--md--right: var(--pf-t--global--box-shadow--X--600);
+  --pf-t--global--box-shadow--X--md--left: var(--pf-t--global--box-shadow--X--100);
+  --pf-t--global--box-shadow--X--md--right: var(--pf-t--global--box-shadow--X--700);
   --pf-t--global--box-shadow--X--md--top: var(--pf-t--global--box-shadow--X--400);
   --pf-t--global--box-shadow--X--sm--bottom: var(--pf-t--global--box-shadow--X--400);
   --pf-t--global--box-shadow--X--sm--default: var(--pf-t--global--box-shadow--X--400);
-  --pf-t--global--box-shadow--X--sm--left: var(--pf-t--global--box-shadow--X--300);
-  --pf-t--global--box-shadow--X--sm--right: var(--pf-t--global--box-shadow--X--500);
+  --pf-t--global--box-shadow--X--sm--left: var(--pf-t--global--box-shadow--X--200);
+  --pf-t--global--box-shadow--X--sm--right: var(--pf-t--global--box-shadow--X--600);
   --pf-t--global--box-shadow--X--sm--top: var(--pf-t--global--box-shadow--X--400);
-  --pf-t--global--box-shadow--Y--lg--bottom: var(--pf-t--global--box-shadow--Y--700);
+  --pf-t--global--box-shadow--Y--lg--bottom: var(--pf-t--global--box-shadow--Y--800);
   --pf-t--global--box-shadow--Y--lg--default: var(--pf-t--global--box-shadow--Y--700);
   --pf-t--global--box-shadow--Y--lg--left: var(--pf-t--global--box-shadow--Y--400);
   --pf-t--global--box-shadow--Y--lg--right: var(--pf-t--global--box-shadow--Y--400);
-  --pf-t--global--box-shadow--Y--lg--top: var(--pf-t--global--box-shadow--Y--100);
-  --pf-t--global--box-shadow--Y--md--bottom: var(--pf-t--global--box-shadow--Y--600);
+  --pf-t--global--box-shadow--Y--lg--top: var(--pf-t--global--box-shadow--Y--50);
+  --pf-t--global--box-shadow--Y--md--bottom: var(--pf-t--global--box-shadow--Y--700);
   --pf-t--global--box-shadow--Y--md--default: var(--pf-t--global--box-shadow--Y--600);
   --pf-t--global--box-shadow--Y--md--left: var(--pf-t--global--box-shadow--Y--400);
   --pf-t--global--box-shadow--Y--md--right: var(--pf-t--global--box-shadow--Y--400);
-  --pf-t--global--box-shadow--Y--md--top: var(--pf-t--global--box-shadow--Y--200);
-  --pf-t--global--box-shadow--Y--sm--bottom: var(--pf-t--global--box-shadow--Y--500);
+  --pf-t--global--box-shadow--Y--md--top: var(--pf-t--global--box-shadow--Y--100);
+  --pf-t--global--box-shadow--Y--sm--bottom: var(--pf-t--global--box-shadow--Y--600);
   --pf-t--global--box-shadow--Y--sm--default: var(--pf-t--global--box-shadow--Y--500);
   --pf-t--global--box-shadow--Y--sm--left: var(--pf-t--global--box-shadow--Y--400);
   --pf-t--global--box-shadow--Y--sm--right: var(--pf-t--global--box-shadow--Y--400);
-  --pf-t--global--box-shadow--Y--sm--top: var(--pf-t--global--box-shadow--Y--300);
+  --pf-t--global--box-shadow--Y--sm--top: var(--pf-t--global--box-shadow--Y--200);
   --pf-t--global--box-shadow--blur--lg: var(--pf-t--global--box-shadow--blur--300);
   --pf-t--global--box-shadow--blur--md: var(--pf-t--global--box-shadow--blur--200);
   --pf-t--global--box-shadow--blur--sm: var(--pf-t--global--box-shadow--blur--100);
-  --pf-t--global--box-shadow--color--lg: var(--pf-t--global--box-shadow--color--200);
-  --pf-t--global--box-shadow--color--md: var(--pf-t--global--box-shadow--color--200);
-  --pf-t--global--box-shadow--color--sm: var(--pf-t--global--box-shadow--color--100);
-  --pf-t--global--box-shadow--spread--lg: var(--pf-t--global--box-shadow--spread--100);
-  --pf-t--global--box-shadow--spread--md: var(--pf-t--global--box-shadow--spread--100);
-  --pf-t--global--box-shadow--spread--sm: var(--pf-t--global--box-shadow--spread--100);
+  --pf-t--global--box-shadow--color--lg--default: var(--pf-t--global--box-shadow--color--100);
+  --pf-t--global--box-shadow--color--lg--directional: var(--pf-t--global--box-shadow--color--200);
+  --pf-t--global--box-shadow--color--md--default: var(--pf-t--global--box-shadow--color--100);
+  --pf-t--global--box-shadow--color--md--directional: var(--pf-t--global--box-shadow--color--100);
+  --pf-t--global--box-shadow--color--sm--default: var(--pf-t--global--box-shadow--color--100);
+  --pf-t--global--box-shadow--color--sm--directional: var(--pf-t--global--box-shadow--color--200);
+  --pf-t--global--box-shadow--spread--lg--default: var(--pf-t--global--box-shadow--spread--100);
+  --pf-t--global--box-shadow--spread--lg--directional: var(--pf-t--global--box-shadow--spread--400);
+  --pf-t--global--box-shadow--spread--md--default: var(--pf-t--global--box-shadow--spread--100);
+  --pf-t--global--box-shadow--spread--md--directional: var(--pf-t--global--box-shadow--spread--300);
+  --pf-t--global--box-shadow--spread--sm--default: var(--pf-t--global--box-shadow--spread--100);
+  --pf-t--global--box-shadow--spread--sm--directional: var(--pf-t--global--box-shadow--spread--200);
   --pf-t--global--breakpoint--2xl: var(--pf-t--global--breakpoint--600);
   --pf-t--global--breakpoint--height--2xl: var(--pf-t--global--breakpoint--550);
   --pf-t--global--breakpoint--height--lg: var(--pf-t--global--breakpoint--300);
@@ -320,7 +335,9 @@
   --pf-t--global--background--color--floating--hover: var(--pf-t--global--background--color--200);
   --pf-t--global--background--color--highlight--clicked: var(--pf-t--global--background--color--highlight--200);
   --pf-t--global--background--color--highlight--default: var(--pf-t--global--background--color--highlight--100);
+  --pf-t--global--background--color--inverse--clicked: var(--pf-t--global--background--color--450);
   --pf-t--global--background--color--inverse--default: var(--pf-t--global--background--color--400);
+  --pf-t--global--background--color--inverse--hover: var(--pf-t--global--background--color--450);
   --pf-t--global--background--color--primary--clicked: var(--pf-t--global--background--color--200);
   --pf-t--global--background--color--primary--default: var(--pf-t--global--background--color--100);
   --pf-t--global--background--color--primary--hover: var(--pf-t--global--background--color--200);
